--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0% 10%;
 }
-
+body::-webkit-scrollbar{
+  display: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
